@@ -2,3 +2,5 @@
 /gen/*
 /.fabric
 /BRANCH_TODO
+
+/libs
