@@ -20,4 +20,5 @@
     	android:smallScreens="true"
     	android:anyDensity="true" />
     <uses-sdk android:minSdkVersion="3" android:targetSdkVersion="5" />
+    <uses-library android:name="libNative" />
 </manifest>
