@@ -1,0 +1,1 @@
+include $(call all-subdir-makefiles)
