@@ -1,0 +1,2 @@
+APP_PROJECT_PATH := $(call my-dir)/..
+APP_MODULES      := libNativeTask
