@@ -1,3 +1,6 @@
+1.x.x (xxxx-xx-xx):
+    * Fix freeze issue when USB debugging mode is disabled.
+
 1.2.1 (2009-10-29)
 	* "Eclair-ready" (compiled against 2.0).
 	* Support all screen sizes.
